--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -5,7 +5,7 @@
 <%= f.text_field :code, class: 'form-control', required: true %>
 <%= f.label :unit_price %>
 <%= f.number_field :unit_price, class: 'form-control', required: true %>
-<%= f.label :max_unit_price, "Max Unit Limit" %>
-<%= f.number_field :max_unit_price, class: 'form-control', required: true %>
+<%= f.label :max_unit_limit, "Max Unit Limit" %>
+<%= f.number_field :max_unit_limit, class: 'form-control', required: true %>
 <%= f.submit "Add Feature", class: "btn btn-primary" %>
 <% end %>
