--- a/app/views/features/new.html.erb
+++ b/app/views/features/new.html.erb
@@ -2,6 +2,6 @@
 <h1>Add Feature</h1>
 <div class="row">
 <div class="col-md-4 col-md-offset-4">
-<%= render 'form' %>
+  <%= render 'form', :labels => {:button => 'Add Feature'} %>
 </div>
 </div>
