--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <footer class="footer">
-<small>
-Billing & Recurring Payment System &copy TYB
-</small>
-<nav>
-<ul>
-<li><%= link_to "Help", help_path %></li>
-<li><%= link_to "About", about_path %></li>
-<li><%= link_to "Contact", contact_path %></li>
-</ul>
-</nav>
+  <small>
+    Billing & Recurring Payment System &copy TYB
+  </small>
+  <nav>
+    <ul>
+      <li><%= link_to 'Help', help_path %></li>
+      <li><%= link_to 'About', about_path %></li>
+      <li><%= link_to 'Contact', contact_path %></li>
+    </ul>
+  </nav>
 </footer>
