--- a/app/views/features/edit.html.erb
+++ b/app/views/features/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Feature') %>
 <h1>Edit Feature</h1>
-<div class="row">
-  <div class="col-md-4 col-md-offset-4">
+<div class='row'>
+  <div class='col-md-4 col-md-offset-4'>
     <%= render 'form', :labels => {:button => 'Update Feature'} %>
   </div>
 </div>
