--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,32 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "TYB APP", home_path, id: "logo" %>
+<header class='navbar navbar-fixed-top navbar-inverse'>
+  <div class='container'>
+    <%= link_to 'TYB APP', home_path, id: 'logo' %>
     <nav>
       <% if user_signed_in? %>
-        <ul class="nav navbar-nav">
-          <li><%= link_to "Home", home_path %></li>
-          <li><%= link_to "Plans", features_path %></li>
-          <li><%= link_to "Features", features_path %></li>
+        <ul class='nav navbar-nav'>
+          <li><%= link_to 'Home', home_path %></li>
+          <li><%= link_to 'Plans', features_path %></li>
+          <li><%= link_to 'Features', features_path %></li>
         </ul>
       <% end %>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class='nav navbar-nav navbar-right'>
         <% if user_signed_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
+          <li class='dropdown'>
+            <a href="#" class='dropdown-toggle' data-toggle='dropdown'>
+              Account <b class='caret'></b>
             </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", '#' %></li>
-              <li><%= link_to "Settings", edit_user_registration_path %></li>
-              <li class="divider"></li>
+            <ul class='dropdown-menu'>
+              <li><%= link_to 'Profile', '#' %></li>
+              <li><%= link_to 'Settings', edit_user_registration_path %></li>
+              <li class='divider'></li>
               <li>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
               </li>
-              </ul>
+            </ul>
         <% else %>
-          <li><%= link_to "Log in", user_session_path %></li>
+          <li><%= link_to 'Log in', user_session_path %></li>
         <% end %>
-        </ul>
+      </ul>
     </nav>
   </div>
 
