--- a/app/views/features/_feature.html.erb
+++ b/app/views/features/_feature.html.erb
@@ -3,6 +3,10 @@
   <td><%= feature.code %></td>
   <td><%= feature.unit_price %></td>
   <td><%= feature.max_unit_limit %></td>
-  <td><%= link_to 'Edit', edit_feature_path(feature) %>
-    <%= link_to 'Destroy', feature, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+  <% if (current_user.admin?) %>
+    <td>
+      <%= link_to 'Edit', edit_feature_path(feature) %>
+      <%= link_to 'Destroy', feature, method: :delete, data: {confirm: 'Are you sure?'} %>
+    </td>
+  <% end %>
 </tr>
