--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,16 +1,20 @@
 <% provide(:title, 'All users') %>
 <h1>All Features</h1>
-<div class='col-md-3'>
-  <%= button_to 'Add New Feature', new_feature_path, method: :get, class: 'btn btn-primary' %>
-  <br>
-</div>
+<% if current_user.admin? %>
+  <div class='col-md-3'>
+    <%= button_to 'Add New Feature', new_feature_path, method: :get, class: 'btn btn-primary' %>
+    <br>
+  </div>
+<% end %>
 <table class="table">
   <tr>
     <th>Name</th>
     <th>Code</th>
     <th>Price</th>
     <th>Units</th>
-    <th>Actions</th>
+    <% if current_user.admin? %>
+      <th>Actions</th>
+    <% end %>
   </tr>
   <tbody class='tbody'>
   <%= render @features %>
