--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <% if user_signed_in? %>
         <ul class='nav navbar-nav'>
           <li><%= link_to 'Home', home_path %></li>
-          <li><%= link_to 'Plans', features_path %></li>
+          <li><%= link_to 'Plans', plans_path %></li>
           <li><%= link_to 'Features', features_path %></li>
         </ul>
       <% end %>
