--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,21 +7,19 @@
         <li><%= link_to 'Help', help_path %></li>
         <% if user_signed_in? %>
           <li class='dropdown'>
-            <a href='#' class='dropdown-toggle' data-toggle="dropdown">
+            <a href='#' class='dropdown-toggle' data-toggle='dropdown'>
               Account <b class='caret'></b>
             </a>
             <ul class='dropdown-menu'>
               <li><%= link_to 'Profile', '#' %></li>
               <li><%= link_to 'Settings', edit_user_registration_path %></li>
               <li class='divider'></li>
-              <li>
-                <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
-              </li>
-              </ul>
+              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+            </ul>
         <% else %>
-          <li><%= link_to "Log in", user_session_path %></li>
+          <li><%= link_to 'Log in', user_session_path %></li>
         <% end %>
-        </ul>
+      </ul>
     </nav>
   </div>
 </header>
