--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -10,6 +10,7 @@
   <tr>
     <th>Name</th>
     <th>Fee</th>
+    <th>Features</th>
     <% if current_user.admin? %>
       <th>Actions</th>
     <% end %>
