--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -7,5 +7,7 @@
       <%= link_to 'Edit', edit_plan_path(plan) %>
       <%= link_to 'Destroy', plan, method: :delete, data: {confirm: 'Are you sure?'} %>
     </td>
+  <% else %>
+  <td><%= link_to 'Subscribe', '#' %></td>
   <% end %>
 </tr>
