Subscriptions views completed

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to 'Home', home_path %></li>
           <li><%= link_to 'Plans', plans_path %></li>
           <li><%= link_to 'Features', features_path %></li>
+          <li><%= link_to 'Subscriptions', subscriptions_path %></li>
         </ul>
       <% end %>
       <ul class='nav navbar-nav navbar-right'>
