Transactions view added

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
           <li><%= link_to 'Plans', plans_path %></li>
           <li><%= link_to 'Features', features_path %></li>
           <li><%= link_to 'Subscriptions', subscriptions_path %></li>
+          <li><%= link_to 'Transactions', transactions_path %></li>
         </ul>
       <% end %>
       <ul class='nav navbar-nav navbar-right'>
