--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,8 +1,9 @@
 <tr>
-  <td><%= subscription.created_at.strftime('%F') %></td>
+  <td><%= subscription.subscription_date.strftime('%F') %></td>
   <td><%= subscription.user.name %></td>
   <td><%= subscription.plan.name %></td>
   <td><%= subscription.active %></td>
+  <td><%= subscription.billing_day %></td>
   <td>
     <%= link_to 'Activation', subscription, method: :put %>
     <%= link_to 'Cancel', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
