--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'Features') %>
 <h1>All Features</h1>
 <% if current_user.admin? %>
   <div class='col-md-3'>
