--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'Plans') %>
 <h1>All Plans</h1>
 <% if current_user.admin? %>
   <div class='col-md-3'>
