--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All Subscriptions') %>
+<% provide(:title, 'Subscriptions') %>
 <h1>All Subscriptions</h1>
 <table class='table'>
   <tr>
@@ -6,6 +6,7 @@
     <th>User</th>
     <th>Plan</th>
     <th>Active</th>
+    <th>Billing Day</th>
     <th>Actions</th>
   </tr>
   <tbody class='tbody'>
