--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= subscription.subscription_date.strftime('%F') %></td>
   <td><%= subscription.user.name %></td>
-  <td><%= subscription.plan.name %></td>
+  <td><%= link_to subscription.plan.name, subscription.plan %></td>
   <td><%= subscription.active %></td>
   <td><%= subscription.billing_day %></td>
   <td>
