--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -9,7 +9,7 @@
   <td><%= transaction.subscription.plan.name %></td>
   <td><%= transaction.subscription.active %></td>
     <%else %>
-    <td>Cancelled</td>
+    <td>Deleted</td>
     <td>false</td>
   <%end %>
   <td><%= transaction.amount %></td>
