--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -1,8 +1,8 @@
 <tr>
   <td><%= plan.name %></td>
   <td><%= plan.monthly_fee %></td>
-  <td><%= plan.features.map(&:name).join(', ') %></td>
-  <% if (current_user.admin?) %>
+  <td><%= plan_features plan%></td>
+  <% if current_user.admin? %>
     <td>
       <%= link_to 'Edit', edit_plan_path(plan) %>
       <%= link_to 'Destroy', plan, method: :delete, data: {confirm: 'Are you sure?'} %>
