--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       <ul class='nav navbar-nav navbar-right'>
         <% if user_signed_in? %>
           <li class='dropdown'>
-            <a href="#" class='dropdown-toggle' data-toggle='dropdown'>
+            <a href='#' class='dropdown-toggle' data-toggle='dropdown'>
               Account <b class='caret'></b>
             </a>
             <ul class='dropdown-menu'>
