--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -2,6 +2,6 @@
 <h1>Add Plan</h1>
 <div class='row'>
   <div class='col-md-4 col-md-offset-4'>
-    <%= render 'form', :labels => {:button => 'Add Plan'} %>
+    <%= render 'form', labels: {button: 'Add Plan'} %>
   </div>
 </div>
