Resolved PR #2 comments

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@plan) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control', required: true %>
-  <%= f.select :features, all_features_for_select, {include_hidden: false, :selected => pre_selected_features }, multiple: true %>
+  <%= f.select :features, all_features_for_select, {include_hidden: false, selected: pre_selected_features }, multiple: true %>
   <%= f.submit labels[:button], class: 'btn btn-primary' %>
 <% end %>
