--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -4,10 +4,9 @@
   <%= f.label :monthly_fee %>
   <%= f.text_field :monthly_fee, class: 'form-control', required: true, min: 0 %>
 
-  <%= f.fields_for(@plan_features) do |ff| %>
-    <%= ff.select :features, @all_features, {include_hidden: false, selected: pre_selected_features(@plan) }, multiple: true %>
-  <% end %>
+  <%#= f.fields_for(@plan.features) do |ff| %>
+  <%= f.select :features, @all_features, {include_hidden: false, selected: pre_selected_features(@plan)}, multiple: true %>
+  <%# end %>
 
-  <%#= f.select :features, Feature.all.collect { |x| [x.name, x.id] }, {include_hidden: false, selected: pre_selected_features(@plan) }, multiple: true %>
   <%= f.submit submit_text, class: 'btn btn-primary' %>
 <% end %>
