--- a/app/views/usages/_subscription.html.erb
+++ b/app/views/usages/_subscription.html.erb
@@ -2,9 +2,8 @@
   <td><%= subscription.subscription_date.strftime('%F') %></td>
   <td><%= subscription.user.name %></td>
   <td><%= link_to subscription.plan.name, subscription.plan %></td>
-  <td><%= subscription.active %></td>
   <td><%= subscription.billing_day %></td>
   <td>
-    <%= link_to 'Add Usage', '#'%>
+    <%= link_to 'Select', usage_select_usage_path(subscription) %>
   </td>
 </tr>
