--- a/app/views/usages/_form.html.erb
+++ b/app/views/usages/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@usage) do |f| %>
-  <%#= f.hidden_field :subscription_id, class: 'form-control', required: true, min: 0, value: @subscription.id %>
+  <%= f.hidden_field :subscription_id, class: 'form-control', value: @subscription.id %>
   <%= f.label :user %>
   <%= f.text_field :user, class: 'form-control', disabled: true, value: @subscription.user.name %>
   <%= f.label :plan %>
