--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -3,10 +3,6 @@
   <%= f.text_field :name, class: 'form-control', required: true %>
   <%= f.label :monthly_fee %>
   <%= f.text_field :monthly_fee, class: 'form-control', required: true, min: 0 %>
-
-  <%#= f.fields_for(@plan.features) do |ff| %>
-  <%= f.select :features, @all_features, {include_hidden: false, selected: pre_selected_features(@plan)}, multiple: true %>
-  <%# end %>
-
+  <%= f.select :feature_ids, @all_features, {include_hidden: false, selected: pre_selected_features(@plan)}, multiple: true %>
   <%= f.submit submit_text, class: 'btn btn-primary' %>
 <% end %>
