--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,14 @@
   <div class='container'>
     <%= link_to 'TYB APP', home_path, id: 'logo' %>
     <nav>
+      <% if user_signed_in? %>
+        <ul class='nav navbar-nav'>
+          <li><%= link_to 'Home', home_path %></li>
+          <li><%= link_to 'Plans', plans_path %></li>
+          <li><%= link_to 'Features', features_path %></li>
+        </ul>
+      <% end %>
       <ul class='nav navbar-nav navbar-right'>
-        <li><%= link_to 'Home', home_path %></li>
-        <li><%= link_to 'Help', help_path %></li>
         <% if user_signed_in? %>
           <li class='dropdown'>
             <a href='#' class='dropdown-toggle' data-toggle='dropdown'>
