--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -1,17 +1,17 @@
 <tr>
   <td><%= link_to plan.name, plan %></td>
   <td><%= plan.monthly_fee %></td>
-  <td><%= plan_features plan %></td>
+  <td><%= plan_features(plan) %></td>
   <% if current_user.admin? %>
     <td>
       <%= link_to 'Edit', edit_plan_path(plan) %>
       <%= link_to 'Destroy', plan, method: :delete, data: {confirm: 'Are you sure?'} %>
     </td>
   <% else %>
-    <% if current_user.subscriptions?(plan) %>
-      <td><%= link_to 'UnSubscribe', subscription_unsubscribe_path(plan), method: :delete, data: {confirm: 'Are you sure?'} %></td>
+    <% if current_user.subscribed?(plan) %>
+      <td><%= link_to 'UnSubscribe', plan_unsubscribe_path(plan), method: :delete, data: {confirm: 'Are you sure?'} %></td>
     <% else %>
-      <td><%= link_to 'Subscribe', subscription_subscribe_path(plan), method: :post, plan_id: plan.id %></td>
+      <td><%= link_to 'Subscribe', plan_subscribe_path(plan), method: :post %></td>
     <% end %>
   <% end %>
 </tr>
