User Subscription to Plan (#3)
* Integrated Devise gem

* Implemented Devise User Model with additional paramters

* Updated README.md file

* Included bootstrap for User Authentication

* Profile Image upload for User completed

* Profile Image upload for User completed

* Featue model added

* Changed User table admin type from string to boolean

* Change column name max_unit_price to max_unit_limit in Features table

* Added index for Features

* Updated .gitignore file

* Removed bin folder from repository

* Removed .ida folder from repository

* Featured CRUD completed

* Fixed format and indentation

* Added extra line at end of files

* Hide Edit/Destory option for simple user

* Plans Crud implemented

* PlansFeatures many-to-many relation created

* Features added with Plan

* Include Features in Plans association completed

* Subscription migration and Model added

* User Subscribe and UnSubscribe a plan functionality completed

* Transaction inserted on Subscribtion

* Subscriptions views completed

* Subscriptions views completed

* Subscriptions views completed

* Transactions view added

* Montly fee calucluation fixed in Edit Plan

* Fixed Plan MontlyFee calculation issue

* Plan show page added

* Plan show page added

* Testing Whenever gem

* Transaction on Subscription completed

* Subscription Controller method subscribe updated

* Remove bin files

* Subscription Controller method unsubscribe updated

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

* Resolved PR #3 comments

--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -1,11 +1,17 @@
 <tr>
-  <td><%= plan.name %></td>
+  <td><%= link_to plan.name, plan %></td>
   <td><%= plan.monthly_fee %></td>
-  <td><%= plan_features plan%></td>
-  <% if current_user.admin? %>
+  <td><%= plan_features(plan) %></td>
+  <% if current_user&.admin? %>
     <td>
       <%= link_to 'Edit', edit_plan_path(plan) %>
       <%= link_to 'Destroy', plan, method: :delete, data: {confirm: 'Are you sure?'} %>
     </td>
+  <% else %>
+    <% if current_user&.subscribed?(plan.id) %>
+      <td>Already Subscribed</td>
+    <% else %>
+      <td><%= link_to 'Subscribe', plan_subscribe_path(plan), method: :post %></td>
+    <% end %>
   <% end %>
 </tr>
