--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control', required: true %>
   <%= f.label :monthly_fee %>
-  <%= f.text_field :monthly_fee, class: 'form-control', required: true, min: 0 %>
+  <%= f.number_field :monthly_fee, class: 'form-control', required: true, min: 0 , default: 0 %>
   <%= f.select :feature_ids, @all_features, {include_hidden: false, selected: pre_selected_features(@plan)}, multiple: true %>
   <%= f.submit submit_text, class: 'btn btn-primary' %>
 <% end %>
