--- a/app/views/usages/_form.html.erb
+++ b/app/views/usages/_form.html.erb
@@ -6,9 +6,9 @@
   <%= f.text_field :plan, class: 'form-control', disabled: true, value: @subscription.plan.name %>
   <%= f.label :feature %>
   <% if @usage.feature.nil? %>
-    <%= f.select :feature, @subscription_features, {:include_hidden => false}, class: 'form-control' %>
+    <%= f.select :feature_id, @subscription_features, {:include_hidden => false}, class: 'form-control' %>
   <% else %>
-    <%= f.text_field :feature, class: 'form-control', disabled: true, value: @usage.feature.name %>
+    <%= f.text_field :feature_id, class: 'form-control', disabled: true, value: @usage.feature.name %>
   <% end %>
   <%= f.label :feature_count %>
   <%= f.number_field :feature_count, class: 'form-control', required: true, min: 0 %>
