--- a/app/views/usages/edit.html.erb
+++ b/app/views/usages/edit.html.erb
@@ -2,6 +2,6 @@
 <h1>Add Usage</h1>
 <div class='row'>
   <div class='col-md-4 col-md-offset-4'>
-    <%= render 'form', :labels => {:button => 'Update Usage'} %>
+    <%= render 'form', locals: {submit_text: 'Update Usage'} %>
   </div>
 </div>
