--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@feature) do |f| %>
+<%= form_for(@feature, html: { 'data-parsley-validate': '' }) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control', required: true %>
   <%= f.label :code %>
