--- a/app/views/usages/add.html.erb
+++ b/app/views/usages/add.html.erb
@@ -9,9 +9,7 @@
     <th>Actions</th>
   </tr>
   <tbody class='tbody'>
-  <% @subscriptions.each { |subscription| %>
-    <%=  render 'usages/subscription', subscription: subscription  %>
-  <% } %>
+  <%= render 'usages/subscription', subscriptions: @subscriptions %>
   </tbody>
 </table>
 <%= will_paginate @subscriptions %>
