--- a/app/views/usages/show.html.erb
+++ b/app/views/usages/show.html.erb
@@ -10,7 +10,7 @@
   </tr>
   <tbody class='tbody'>
   <% @subscriptions.each { |subscription| %>
-    <%=  render 'usages/subscription', subscription: subscription  %>
+    <%= render 'usages/subscription', subscriptions: @subscriptions %>
   <% } %>
   </tbody>
 </table>
