Resolved PR #4 comments on nested routes

--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -9,5 +9,7 @@
       |
       <%= link_to 'Charge', subscription_charge_path(subscription), method: :post %>
     <% end %>
+    |
+    <%= link_to 'Usages', subscription_usages_path(subscription), method: :get %>
   </td>
 </tr>
