--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <li><%= link_to 'Features', features_path %></li>
           <li><%= link_to 'Subscriptions', subscriptions_path %></li>
           <li><%= link_to 'Transactions', transactions_path %></li>
-          <li><%= link_to 'Usages', usages_path %></li>
+          <li><%= link_to 'Usages', all_usages_subscriptions_path %></li>
         </ul>
       <% end %>
       <ul class='nav navbar-nav navbar-right'>
