--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -2,7 +2,7 @@
 <h1>Usages</h1>
 <% if current_user.admin? %>
   <div class='col-md-3'>
-    <%= button_to 'Add Usage', add_usages_path, method: :get, class: 'btn btn-primary' %>
+    <%= button_to 'Add Usage', new_subscription_usage_path, method: :get, class: 'btn btn-primary' %>
     <br>
   </div>
 <% end %>
@@ -13,7 +13,9 @@
     <th>Feature</th>
     <th>Features Limit</th>
     <th>Features Used</th>
-    <th>Actions</th>
+    <% if current_user.admin? %>
+      <th>Actions</th>
+    <% end %>
   </tr>
   <tbody class='tbody'>
   <%= render @usages %>
