Resolved PR #4 comments Rake task for daily transaction

--- a/app/views/usages/_usage.html.erb
+++ b/app/views/usages/_usage.html.erb
@@ -2,7 +2,7 @@
   <td><%= usage.subscription.user.name %></td>
   <td><%= link_to usage.subscription.plan.name, usage.subscription.plan %></td>
   <td><%= usage.feature.name %></td>
-  <td><%= usage.subscription.plan.features.include?(usage.feature) ? usage.feature.max_unit_limit : '' %></td>
+  <td><%= usage.feature.max_unit_limit %></td>
   <td><%= usage.feature_count %></td>
   <% if current_user.admin? %>
     <td><%= link_to 'Add More', edit_subscription_usage_path(usage.subscription, usage) %></td>
