Pundit autorization applied on views

--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Features') %>
 <h1>All Features</h1>
-<% if current_user.admin? %>
+<% if policy(:feature).new? %>
   <div class='col-md-3'>
     <%= button_to 'Add New Feature', new_feature_path, method: :get, class: 'btn btn-primary' %>
     <br>
@@ -12,7 +12,7 @@
     <th>Code</th>
     <th>Price</th>
     <th>Units</th>
-    <% if current_user.admin? %>
+    <% if policy(:feature).update? %>
       <th>Actions</th>
     <% end %>
   </tr>
