--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -2,7 +2,7 @@
   <td><%= link_to plan.name, plan %></td>
   <td><%= plan.monthly_fee %></td>
   <td><%= plan_features(plan) %></td>
-  <% if current_user&.admin? %>
+  <% if policy(:plan).update? %>
     <td>
       <%= link_to 'Edit', edit_plan_path(plan) %>
       <%= link_to 'Destroy', plan, method: :delete, data: {confirm: 'Are you sure?'} %>
