--- a/app/views/features/_feature.html.erb
+++ b/app/views/features/_feature.html.erb
@@ -3,7 +3,7 @@
   <td><%= feature.code %></td>
   <td><%= feature.unit_price %></td>
   <td><%= feature.max_unit_limit %></td>
-  <% if policy(:feature).update? && policy(:feature).destroy? %>
+  <% if policy(:feature).update? %>
     <td>
       <%= link_to 'Edit', edit_feature_path(feature) %>
       <%= link_to 'Destroy', feature, method: :delete, data: {confirm: 'Are you sure?'} %>
