Resolved PR #4 comments

--- a/app/views/usages/_usage.html.erb
+++ b/app/views/usages/_usage.html.erb
@@ -5,6 +5,6 @@
   <td><%= usage.feature.max_unit_limit %></td>
   <td><%= usage.feature_count %></td>
   <% if current_user.admin? %>
-    <td><%= link_to 'Add More', edit_subscription_usage_path(usage.subscription, usage) %></td>
+    <td><%= link_to 'Add', edit_subscription_usage_path(usage.subscription, usage) %></td>
   <% end %>
 </tr>
