--- a/app/views/usages/_form.html.erb
+++ b/app/views/usages/_form.html.erb
@@ -1,5 +1,4 @@
-<%= form_for(@usage) do |f| %>
-  <%= f.hidden_field :subscription_id, class: 'form-control', value: @subscription.id %>
+<%= form_for([@subscription, @usage]) do |f| %>
   <%= f.label :user %>
   <%= f.text_field :user, class: 'form-control', disabled: true, value: @subscription.user.name %>
   <%= f.label :plan %>
