--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -18,6 +18,6 @@
     <% end %>
   </tr>
   <tbody class='tbody'>
-  <%= render @usages %>
+    <%= render @subscription.usages %>
   </tbody>
 </table>
