--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -5,5 +5,11 @@
   <td><%= subscription.billing_day %></td>
   <td>
     <%= link_to 'UnSubscribe', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
+    <% if is_billing_day?(subscription.billing_day) %>
+      |
+      <%= link_to 'Charge', subscription_charge_path(subscription), method: :post %>
+    <% end %>
+    |
+    <%= link_to 'Usages', subscription_usages_path(subscription), method: :get %>
   </td>
 </tr>
