--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -2,7 +2,7 @@
 <h1>Usages</h1>
 <% if policy(:usage).new? %>
   <div class='col-md-3'>
-    <%= button_to 'Add Usage', add_usages_path, method: :get, class: 'btn btn-primary' %>
+    <%= button_to 'Add Usage', new_subscription_usage_path, method: :get, class: 'btn btn-primary' %>
     <br>
   </div>
 <% end %>
