--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-4">
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, 'data-parsley-validate': '' }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="col-sm-offset-3">
@@ -41,7 +41,7 @@
 
       <div class="field">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br/>
-        <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+        <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control', required: true %>
       </div>
 
       <div class="actions">
