--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-4">
     <h1>Sign up</h1>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { 'data-parsley-validate': '' }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
