--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -5,16 +5,20 @@
     <%= button_to 'Add New Plan', new_plan_path, method: :get, class: 'btn btn-primary' %>
     <br>
   </div>
-<% end %>
-<table class='table'>
-  <tr>
-    <th>Name</th>
-    <th>Fee</th>
-    <th>Features</th>
-    <th>Actions</th>
-  </tr>
-  <tbody class='tbody'>
+  <table class='table'>
+    <tr>
+      <th>Name</th>
+      <th>Fee</th>
+      <th>Features</th>
+      <th>Actions</th>
+    </tr>
+    <tbody class='tbody'>
+    <%= render @plans %>
+    </tbody>
+  </table>
+  <%= will_paginate %>
+<% else %>
+<div class="row">
   <%= render @plans %>
-  </tbody>
-</table>
-<%= will_paginate %>
+</div>
+<% end %>
