--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,15 +1,36 @@
-<tr>
-  <td><%= subscription.created_at.strftime('%F') %></td>
-  <td><%= subscription.user.name %></td>
-  <td><%= link_to subscription.plan.name, subscription.plan %></td>
-  <td><%= subscription.billing_day %></td>
-  <td>
-    <%= link_to 'UnSubscribe', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
-    <% if policy(:subscription).charge? && charge_able?(subscription)%>
+<% if policy(:subscription).charge? %>
+  <tr>
+    <td><%= subscription.created_at.strftime('%F') %></td>
+    <td><%= subscription.user.name %></td>
+    <td><%= link_to subscription.plan.name, subscription.plan %></td>
+    <td><%= subscription.billing_day %></td>
+    <td>
+      <%= link_to 'UnSubscribe', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
+      <% if charge_able?(subscription) %>
+        |
+        <%= link_to 'Charge', subscription_charge_path(subscription), method: :post %>
+      <% end %>
       |
-      <%= link_to 'Charge', subscription_charge_path(subscription), method: :post %>
-    <% end %>
-      |
-    <%= link_to 'Usages', subscription_usages_path(subscription), method: :get %>
-  </td>
-</tr>
+      <%= link_to 'Usages', subscription_usages_path(subscription), method: :get %>
+    </td>
+  </tr>
+<% else %>
+  <div class="col-md-3">
+    <div class="card mx-auto">
+      <div class="card-body">
+        <h3 class="card-title"><%= subscription&.plan&.name %></h3>
+        <h6 class="card-subtitle mb-2 text-muted">Subscription date : <%= subscription.created_at.strftime('%F') %></h6>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="text-muted">Price: <b><%= subscription&.plan&.monthly_fee %></b></p>
+            <p class="text-muted">Billing Day: <b><%= subscription&.billing_day %></b></p>
+            <p class="text-muted">Features:<br> <b><%= plan_features(subscription&.plan) %></b></p>
+          </div>
+        </div>
+      </div>
+      <%= button_to 'View Usages', subscription_usages_path(subscription), method: :get, class: 'btn btn-primary' %>
+      <hr>
+      <%= button_to 'Cancel Subscription', subscription, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %>
+    </div>
+  </div>
+<% end %>
