--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,22 @@
-Welcome
+<div class="row">
+  <div class="four col-md-3">
+    <div class="counter-box colored"> <i class="fa fa-stack-exchange"></i> <span class="counter">10</span>
+      <p>Features</p>
+    </div>
+  </div>
+  <div class="four col-md-3">
+    <div class="counter-box colored"> <i class="fa fa-bars"></i> <span class="counter">4</span>
+      <p>Plans</p>
+    </div>
+  </div>
+  <div class="four col-md-3">
+    <div class="counter-box colored"> <i class="fa fa-cubes"></i> <span class="counter">10</span>
+      <p>Subscriptions</p>
+    </div>
+  </div>
+  <div class="four col-md-3">
+    <div class="counter-box colored"> <i class="fa fa-users"></i> <span class="counter">4</span>
+      <p>Users</p>
+    </div>
+  </div>
+</div>
