--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,12 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-  <div class='container'>
+  <div class='container main'>
     <% flash.each do |message_type, message| %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
     <%= yield %>
-    <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
   </div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
