* static pages modified and designed

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="row">
+  <div class="col-md-4">
+  </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body text-center"><img src="https://img.icons8.com/bubbles/100/000000/laptop.png">
+        <h4>Contact us</h4>
+        <p>Drop us a mail or use our online online chat feature and we will try to answer your query as soon as
+          possible</p>
+        <button class="btn btn-out btn-square"> CONTACT NOW</button>
+      </div>
+    </div>
+  </div>
+</div>
