--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,31 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h3 class="heading mt-5 text-center">Hi! How can we help You?</h3>
+<div class="d-flex justify-content-center px-5 col-md-10">
+  <div class="search"><input type="text" class="search-input" placeholder="Search..." name="">
+    <a href="#" class="search-icon"> <i class="fa fa-search"></i> </a></div>
+</div>
+<div class="row col-md-9">
+  <div class="col-md-3">
+    <div class="card-inner p-3 d-flex flex-column align-items-center">
+      <img src="https://i.imgur.com/Mb8kaPV.png" width="50">
+      <div class="text-center mg-text"><span class="mg-text">Features</span></div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="card-inner p-3 d-flex flex-column align-items-center">
+      <img src="https://i.imgur.com/ueLEPGq.png" width="50">
+      <div class="text-center mg-text"><span class="mg-text">Plans</span></div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="card-inner p-3 d-flex flex-column align-items-center">
+      <img src="https://i.imgur.com/tmqv0Eq.png" width="50">
+      <div class="text-center mg-text"><span class="mg-text">Subscriptions</span></div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="card-inner p-3 d-flex flex-column align-items-center">
+      <img src="https://i.imgur.com/D0Sm15i.png" width="50">
+      <div class="text-center mg-text"><span class="mg-text">Transactions</span></div>
+    </div>
+  </div>
+</div>
