--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,9 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require font-awesome
+ *= require dataTables/jquery.dataTables
  *= require_tree .
  *= require_self
- *= require font-awesome
  */
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
@@ -83,7 +84,7 @@ p {
 
 #logo {
   float: left;
-  margin-right: 10px;
+  margin-left: -50px;
   font-size: 1.7em;
   color: white;
   text-transform: uppercase;
