--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,8 +1,8 @@
 <% if policy(:subscription).charge? %>
   <tr>
-    <td><%= subscription.created_at.strftime('%F') %></td>
-    <td><%= subscription.user.name %></td>
-    <td><%= link_to subscription.plan.name, subscription.plan %></td>
+    <td><%= subscription&.created_at.strftime('%F') %></td>
+    <td><%= subscription&.user.name %></td>
+    <td><%= link_to subscription&.plan&.name, subscription.plan %></td>
     <td><%= subscription.billing_day %></td>
     <td>
       <%= link_to 'UnSubscribe', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
