--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, 'Transactions') %>
 <h1>All Transactions</h1>
-<table class='table'>
+<table class='table' id="dTable">
+  <thead>
   <tr>
     <th>Transaction Date</th>
     <th>User</th>
     <th>Subscription Plan</th>
     <th>Amount</th>
   </tr>
+  </thead>
   <tbody class='tbody'>
     <%= render @transactions %>
   </tbody>
