--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Transactions') %>
 <h1>All Transactions</h1>
-<table class='table' id="dTable">
+<table class='table table-bordered'>
   <thead>
   <tr>
     <th>Transaction Date</th>
