--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -6,7 +6,7 @@
     <br>
   </div>
 <% end %>
-<table class='table'>
+<table class='table table-bordered'>
   <tr>
     <th>Name</th>
     <th>Code</th>
